--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slides to present TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "fusuma build"
   },
   "author": "Ya'ar Hever <yaar.hever@tourlane.com>",
   "license": "ISC",
