--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Slides to present TypeScript",
   "main": "index.js",
   "scripts": {
-    "build": "fusuma build"
+    "build": "fusuma build",
+    "start": "fusuma start"
   },
   "author": "Ya'ar Hever <yaar.hever@tourlane.com>",
   "license": "ISC",
